--- a/css/general.css
+++ b/css/general.css
@@ -282,7 +282,8 @@ footer {
 		background-image: url("../images/background-phone.png");
 		background-size: cover;
 		background-repeat: no-repeat;
-		width: 100%;
+		width: 10%;
+		height: 200px;
 	}
 }
 
@@ -294,7 +295,8 @@ footer {
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: 75%;
-		width: 100%;
+		width: 15%;
+		height: 200px;
 	}
 
 	nav > div:first-child {
@@ -344,7 +346,8 @@ footer {
 		background-image: url("../images/background.png");
 		background-size: cover;
 		background-repeat: no-repeat;
-		width: 100%;
+		width: 25%;
+		height: 200px;
 	}
 
 	.logo {
